src/bindings.h

  
  FFI_PLUGIN_EXPORT enum PlayerErrors initEngine(int deviceID,
                                                 unsigned int sampleRate,
                                                 unsigned int bufferSize,
                                                 unsigned int channels,
                                                 unsigned int lowLatency,
                                                 unsigned int devicePeriodFrames,
                                                 unsigned int renderAheadFrames);
  FFI_PLUGIN_EXPORT void dispose();
  FFI_PLUGIN_EXPORT enum PlayerErrors play(
      unsigned int soundHash, unsigned int busId, float volume, float pan,
      bool paused, bool looping, double loopingStartAt, double loopingEndAt,
      int loopingStartOffsetAt, int loopingEndOffsetAt, float scale,
      unsigned int *handle);
  FFI_PLUGIN_EXPORT enum PlayerErrors playClocked(
      unsigned int soundHash, double soundTime, unsigned int busId,
      float volume, float pan, float scale, bool looping,
      double loopingStartAt, double loopingEndAt, int loopingStartOffsetAt,
      int loopingEndOffsetAt, unsigned int *handle);
  FFI_PLUGIN_EXPORT void resetStreamTime();
  FFI_PLUGIN_EXPORT double getEngineTime();
  FFI_PLUGIN_EXPORT double getPlayheadTime();
  FFI_PLUGIN_EXPORT double getOutputLatency();
  FFI_PLUGIN_EXPORT unsigned int isRenderAheadEnabled();
  FFI_PLUGIN_EXPORT enum PlayerErrors playScheduled(
      unsigned int soundHash, double atTime, double duration,
      unsigned int busId, float volume, float pan, float scale, bool looping,
      double loopingStartAt, double loopingEndAt, int loopingStartOffsetAt,
      int loopingEndOffsetAt, unsigned int *handle);
  FFI_PLUGIN_EXPORT void stopScheduled(unsigned int handle, double atTime);
  FFI_PLUGIN_EXPORT void fadeScheduled(unsigned int handle, double atTime,
                                       float to, double fadeTime,
                                       bool thenStop);
  FFI_PLUGIN_EXPORT enum PlayerErrors stop(unsigned int handle);
  FFI_PLUGIN_EXPORT void stopAll();
  FFI_PLUGIN_EXPORT void stopAudioSource(unsigned int soundHash);
  FFI_PLUGIN_EXPORT void disposeSound(unsigned int soundHash);
  FFI_PLUGIN_EXPORT void disposeAllSound();
  FFI_PLUGIN_EXPORT int getLooping(unsigned int handle);
  FFI_PLUGIN_EXPORT void setLooping(unsigned int handle, bool enable);
  FFI_PLUGIN_EXPORT double getLoopPoint(unsigned int handle);
  FFI_PLUGIN_EXPORT void setLoopPoint(unsigned int handle, double time);
  FFI_PLUGIN_EXPORT double getLoopEndPoint(unsigned int handle);
  FFI_PLUGIN_EXPORT void setLoopEndPoint(unsigned int handle, double time);
  FFI_PLUGIN_EXPORT enum PlayerErrors setVisualizationEnabled(bool enabled,
                                                              int windowSize,
                                                              int kind,
                                                              int channel);
  FFI_PLUGIN_EXPORT int getVisualizationEnabled();
  FFI_PLUGIN_EXPORT void setFftSmoothing(float smooth);
  FFI_PLUGIN_EXPORT double getLength(unsigned int soundHash);
  FFI_PLUGIN_EXPORT enum PlayerErrors seek(unsigned int handle, float time);
  FFI_PLUGIN_EXPORT double getPosition(unsigned int handle);
  FFI_PLUGIN_EXPORT double getGlobalVolume();
  FFI_PLUGIN_EXPORT enum PlayerErrors setGlobalVolume(float volume);
  FFI_PLUGIN_EXPORT double getVolume(unsigned int handle);
  FFI_PLUGIN_EXPORT enum PlayerErrors setVolume(unsigned int handle,
                                                float volume);
  FFI_PLUGIN_EXPORT double getPan(unsigned int handle);
  FFI_PLUGIN_EXPORT void setPan(unsigned int handle, double pan);
  FFI_PLUGIN_EXPORT void setPanAbsolute(unsigned int handle, double panLeft,
                                        double panRight);
  FFI_PLUGIN_EXPORT enum PlayerErrors play3dClocked(
      unsigned int soundHash, double soundTime, unsigned int busId,
      float posX, float posY, float posZ, float velX, float velY, float velZ,
      float volume, float scale, bool looping, double loopingStartAt,
      double loopingEndAt, int loopingStartOffsetAt, int loopingEndOffsetAt,
      unsigned int *handle);