lib/src/bindings/flutter_soloud_ffigen.dart


/// Reset the clock used by [playClocked] and [play3dClocked] to the state
/// as if they were never called.
///
/// The next clocked play will anchor the caller's "physics time" to the
/// audio clock again (leading by two output buffers).
@ffi.Native<ffi.Void Function()>()
external void resetStreamTime();

/// Get the engine's global stream time, in seconds.
///
/// This is the clock the mixer advances at the start of every output
/// buffer and the time base used by [playScheduled], [stopScheduled] and
/// [fadeScheduled]. It only advances while the audio device is mixing.
///
/// Return the engine time in seconds.
@ffi.Native<ffi.Double Function()>()
external double getEngineTime();

/// Engine time of the sample currently reaching the output device: the mix
/// clock (see [getEngineTime]) minus the render-ahead ring depth. Equals
/// [getEngineTime] when the render-ahead ring is disabled (the default).
@ffi.Native<ffi.Double Function()>()
external double getPlayheadTime();

/// Estimated output latency in seconds (render-ahead ring depth plus one
/// device period). 0 when the render-ahead ring is disabled.
@ffi.Native<ffi.Double Function()>()
external double getOutputLatency();

/// Whether the render-ahead ring (the retroactive re-mix prerequisite) is
/// active. Enabled at init time via `initEngine`'s `renderAheadFrames`.
@ffi.Native<ffi.UnsignedInt Function()>()
external int isRenderAheadEnabled();

/// Start playing a sound at an absolute engine time (see [getEngineTime]),
/// with sample accuracy.
///
/// Unlike [playClocked] there is no anchor and no re-anchor guard, so
/// sounds can be scheduled arbitrarily far in the future. A time in the
/// past plays as soon as possible.
///
/// [soundHash] the unique sound hash of a sound
/// [atTime] the absolute engine time, in seconds, at which the sound
/// should start
/// [duration] if greater than zero, the sound is automatically stopped
/// at [atTime] + [duration]
/// [busId] the bus ID to play the sound on. 0 means the main engine.
/// [volume] 1.0f full volume
/// [pan] 0.0f centered
/// [scale] relative playback speed multiplier (1.0f = normal speed)
/// [looping] whether the sound loops upon reaching the end
/// [loopingStartAt] time position in seconds to restart playback when
/// looping
/// [handle] pointer to the handle for this new sound
/// Return the error if any and a new [handle] of this sound
/// [loopingStartOffsetAt] Optional exact frame offset to restart looping
/// from (-1 = inactive).
/// [loopingEndOffsetAt] Optional exact frame offset to loop before
/// (-1 = inactive).
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Double,
    ffi.Double,
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Bool,
    ffi.Double,
    ffi.Double,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'playScheduled')
external int _playScheduled(
  int soundHash,
  double atTime,
  double duration,
  int busId,
  double volume,
  double pan,
  double scale,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors playScheduled(
  int soundHash,
  double atTime,
  double duration,
  int busId,
  double volume,
  double pan,
  double scale,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(
  _playScheduled(
    soundHash,
    atTime,
    duration,
    busId,
    volume,
    pan,
    scale,
    looping,
    loopingStartAt,
    loopingEndAt,
    loopingStartOffsetAt,
    loopingEndOffsetAt,
    handle,
  ),
);

/// Stop a sound at an absolute engine time (see [getEngineTime]).
///
/// A time in the past stops the sound immediately.
///
/// [handle] the sound handle
/// [atTime] the absolute engine time, in seconds, at which the sound
/// should stop
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Double)>()
external void stopScheduled(int handle, double atTime);

/// Fade the volume of a sound starting at an absolute engine time
/// (see [getEngineTime]).
///
/// The fade goes from the volume the sound has at call time to [to] over
/// [fadeTime] seconds. If [thenStop] is true, the sound is stopped when
/// the fade ends (at [atTime] + [fadeTime]).
///
/// [handle] the sound handle
/// [atTime] the absolute engine time, in seconds, at which the fade
/// should start. A time in the past starts the fade immediately.
/// [to] the ending volume of the fade
/// [fadeTime] the duration of the fade, in seconds
/// [thenStop] whether to stop the sound when the fade ends
@ffi.Native<
  ffi.Void Function(
    ffi.UnsignedInt,
    ffi.Double,
    ffi.Float,
    ffi.Double,
    ffi.Bool,
  )
>()
external void fadeScheduled(
  int handle,
  double atTime,
  double to,
  double fadeTime,
  bool thenStop,
);

/// Stop already loaded sound identified by [handle] and clear it
///
/// [handle]
/// Returns [PlayerErrors.noError] if success, [PlayerErrors.backendNotInited]
/// if the engine is not initialized, [PlayerErrors.soundHandleNotFound] if
/// [handle] is not valid (for example the voice has already ended).
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt)>(symbol: 'stop')
external int _stop(int handle);

PlayerErrors stop(int handle) => PlayerErrors.fromValue(_stop(handle));

/// Stop all playing voices without disposing the loaded sounds.
///
/// Each stopped voice triggers the voice-ended callback (dispatched by
/// SoLoud itself), so Dart is notified for every handle like with [stop].
@ffi.Native<ffi.Void Function()>()
external void stopAll();

/// Stop all voices playing the already loaded sound identified by
/// [soundHash] without disposing it.
///
/// Each stopped voice triggers the voice-ended callback (dispatched by
/// SoLoud itself), so Dart is notified for every handle like with [stop].
@ffi.Native<ffi.Void Function(ffi.UnsignedInt)>()
external void stopAudioSource(int soundHash);

/// Stop all handles of the already loaded sound identified by [hash] and
/// dispose it
///
/// [soundHash]
@ffi.Native<ffi.Void Function(ffi.UnsignedInt)>()
external void disposeSound(int soundHash);

/// Dispose all sounds already loaded
@ffi.Native<ffi.Void Function()>()
external void disposeAllSound();

/// Query whether a sound is set to loop.
///
/// [handle]
/// Returns true if flagged for looping.
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>()
external int getLooping(int handle);

/// This function can be used to set a sample to play on repeat,
/// instead of just playing once
///
/// [soundHash]
/// [enable]
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Bool)>()
external void setLooping(int handle, bool enable);

/// Get sound loop point value.
///
/// [handle]
/// Returns the time in seconds.
@ffi.Native<ffi.Double Function(ffi.UnsignedInt)>()
external double getLoopPoint(int handle);

/// Set sound loop point value.
///
/// [handle]
/// [time] in seconds.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Double)>()
external void setLoopPoint(int handle, double time);

/// Get the sound loop end point value.
///
/// [handle]
/// Returns the time in seconds, or zero for the natural stream end.
@ffi.Native<ffi.Double Function(ffi.UnsignedInt)>()
external double getLoopEndPoint(int handle);

/// Set the sound loop end point value.
///
/// [handle]
/// [time] in seconds, or zero to use the natural stream end.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Double)>()
external void setLoopEndPoint(int handle, double time);

/// Enable or disable visualization
///
/// [enabled] enable or disable it
/// [windowSize] power of two from 128 to 8192 (default 256)
/// [kind] 0: wave, 1: FFT, 2: wave and FFT
/// [channel] -1: merged mono, -2: all channels, >= 0: specific channel index
@ffi.Native<ffi.UnsignedInt Function(ffi.Bool, ffi.Int, ffi.Int, ffi.Int)>(
  symbol: 'setVisualizationEnabled',
)
external int _setVisualizationEnabled(
  bool enabled,
  int windowSize,
  int kind,
  int channel,
);

PlayerErrors setVisualizationEnabled(
  bool enabled,
  int windowSize,
  int kind,
  int channel,
) => PlayerErrors.fromValue(
  _setVisualizationEnabled(enabled, windowSize, kind, channel),
);

/// Get visualization state
///
/// Return true if enabled
@ffi.Native<ffi.Int Function()>()
external int getVisualizationEnabled();

/// Smooth FFT data.
/// When new data is read and the values are decreasing, the new value will
/// be decreased with an amplitude between the old and the new value.
/// This will result on a less shaky visualization.
///
/// [smooth] must be in the [0.0 ~ 1.0] range.
/// 0 = no smooth
/// 1 = full smooth
@ffi.Native<ffi.Void Function(ffi.Float)>()
external void setFftSmoothing(double smooth);

/// Get the sound length in seconds
///
/// [soundHash] the sound hash
/// Returns sound length in seconds
@ffi.Native<ffi.Double Function(ffi.UnsignedInt)>()
external double getLength(int soundHash);

/// Seek playing in [time] seconds
/// [time]
/// [handle] the sound handle
/// Returns [PlayerErrors.noError] if success
///
/// NOTE: when seeking an mp3 file loaded using `loadIntoMem`=false
/// the seek operation is not performed due to lags. This occurs because the
/// mp3 codec must compute each frame length to gain a new position.
/// The problem is explained in souloud_wavstream.cpp
/// in `WavStreamInstance::seek` function.
///
/// This mode is useful ie for background music, not for a music player
/// where a seek slider for mp3s is a must.
/// If you need seeking mp3, please, use `loadIntoMem`=true instead
/// or other audio formats!
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float)>(
  symbol: 'seek',
)
external int _seek(int handle, double time);

PlayerErrors seek(int handle, double time) =>
    PlayerErrors.fromValue(_seek(handle, time));

/// Get current sound position  in seconds
///
/// [handle] the sound handle
/// Returns time in seconds
@ffi.Native<ffi.Double Function(ffi.UnsignedInt)>()
external double getPosition(int handle);

/// Get current Global volume
///
/// Returns the volume
@ffi.Native<ffi.Double Function()>()
external double getGlobalVolume();

/// Set current Global volume
///
/// Returns the volume
@ffi.Native<ffi.UnsignedInt Function(ffi.Float)>(symbol: 'setGlobalVolume')
external int _setGlobalVolume(double volume);

PlayerErrors setGlobalVolume(double volume) =>
    PlayerErrors.fromValue(_setGlobalVolume(volume));

/// Get current [handle] volume
///
/// Returns the volume
@ffi.Native<ffi.Double Function(ffi.UnsignedInt)>()
external double getVolume(int handle);

/// Set current [handle] volume
@ffi.Native<ffi.UnsignedInt Function(ffi.UnsignedInt, ffi.Float)>(
  symbol: 'setVolume',
)
external int _setVolume(int handle, double volume);

PlayerErrors setVolume(int handle, double volume) =>
    PlayerErrors.fromValue(_setVolume(handle, volume));

/// Get a sound's current pan setting.
///
/// [handle] the sound handle.
/// Returns the range of the pan values is -1 to 1, where -1 is left, 0 is
/// middle and and 1 is right.
@ffi.Native<ffi.Double Function(ffi.UnsignedInt)>()
external double getPan(int handle);

/// Set a sound's current pan setting.
///
/// [handle] the sound handle.
/// [pan] the range of the pan values is -1 to 1, where -1 is left, 0 is
/// middle and and 1 is right.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Double)>()
external void setPan(int handle, double pan);

/// Set the left/right volumes directly.
/// Note that this does not affect the value returned by getPan.
///
/// [handle] the sound handle.
/// [panLeft] value for the left pan.
/// [panRight] value for the right pan.
@ffi.Native<ffi.Void Function(ffi.UnsignedInt, ffi.Double, ffi.Double)>()
external void setPanAbsolute(int handle, double panLeft, double panRight);
